// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`disabled false 1`] = `
Object {
  "Options": Object {
    "disabled": false,
  },
  "html": "<input>",
}
`;

exports[`disabled true 1`] = `
Object {
  "Options": Object {
    "disabled": true,
  },
  "html": "<input disabled=\\"\\">",
}
`;

exports[`disabled update 1`] = `
Object {
  "Options": Object {
    "disabled": false,
  },
  "html": "<input>",
}
`;

exports[`disabled update 2`] = `
Object {
  "Options": Object {
    "disabled": true,
  },
  "html": "<input disabled=\\"\\">",
}
`;
